attempt 2 at fixing date inputs on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -206,7 +206,10 @@ label.file_optional {
     .medium-12.columns select {
     font-size: 10px;
     }
-    #invite_start_date_2i, invite_end_date_2i {
+    #invite_start_date_2i, .invite_end_date_2i {
         width: 20%!important;
     }
+    .date-range {
+        padding-left: .5rem;
+        padding-right: .5rem;
 }
